fix bug: nav dropdown behind containers; style: postion-fixed nav

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -9,6 +9,7 @@
 html body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
+  padding-top: 30px;
   margin: 0;
   background-color: $background;
 }
